docs/pages/versions/v57.0.0/sdk/ui/swift-ui/controlgroup.mdx
---
title: ControlGroup
description: A SwiftUI ControlGroup component for grouping interactive controls.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI ControlGroup matches the official SwiftUI [ControlGroup API](https://developer.apple.com/documentation/swiftui/controlgroup). When placed inside a [`Menu`](menu), the children are rendered as a compact horizontal row of buttons.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/controlgroup/ios-light.webp"
  darkSrc="/static/images/expo-ui/controlgroup/ios-dark.webp"
  alt="An open Menu showing a ControlGroup row of Add, Favorite, Share icon buttons above Rename and Delete entries"
/>

> **Note:** On tvOS, `ControlGroup` requires tvOS 17.0 or later.

## Installation

<APIInstallSection />

## Usage

### Basic control group

A control group inside a menu, these render as a horizontal row of icon buttons.

<ComponentExample
  title="BasicControlGroupExample.tsx"
  src="/static/images/expo-ui/examples/controlgroup-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/controlgroup-basic-ios-dark.webp"
  alt="An open menu with an Add, Favorite, and Share icon row above an Other Action entry">

```tsx
import { Host, Menu, ControlGroup, Button } from '@expo/ui/swift-ui';

export default function BasicControlGroupExample() {
  // `matchContents` sizes the host to the menu trigger instead of filling the
  // space. The trigger then sits at the leading edge.
  return (
    <Host style={{ flex: 1 }}>
      <Menu label="Options" systemImage="ellipsis.circle">
        <ControlGroup>
          <Button systemImage="plus" label="Add" onPress={() => console.log('Add')} />
          <Button systemImage="star" label="Favorite" onPress={() => console.log('Favorite')} />
          <Button
            systemImage="square.and.arrow.up"
            label="Share"
            onPress={() => console.log('Share')}
          />
        </ControlGroup>
        <Button label="Other Action" onPress={() => console.log('Other')} />
      </Menu>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { ControlGroup } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/controlgroup" apiName="ControlGroup" />
